--- a/dimension/sections/blog/feed.jinja
+++ b/dimension/sections/blog/feed.jinja
@@ -1,4 +1,4 @@
-<a class="btn btn-info" style="color: #f0f0f0;background-color: #2f3237;border-color: #42454c;" href="/" target="_blank">Back to the main page</a>
+<a class="btn btn-info" style="color: #f0f0f0;background-color: #2f3237;border-color: #42454c;" href="/" target="_blank">Main page</a>
 {% for post in blog %}
     <div class="card" style="background-color: rgba(27, 31, 34, 0.85);color: #f0f0f0 !important;">
             <div class="card-body">
