--- a/dimension/sections/blog/overview.jinja
+++ b/dimension/sections/blog/overview.jinja
@@ -7,6 +7,31 @@
     <title>{{ config["name"] }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/overview-blog.css">
+
+
+{% if config["background"] %}			
+	<style>
+		#bg:after {
+			-moz-transform: scale(1.125);
+			-webkit-transform: scale(1.125);
+			-ms-transform: scale(1.125);
+			transform: scale(1.125);
+			-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
+			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
+			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
+			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+		{% if config['background'].startswith('http') or config['background'].startswith('images') %}
+			background-image: url("{{ config['background'] }}");
+		{% else %}
+			background-image: url("images/{{ config['background'] }}");
+		{% endif %}
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+			z-index: 1;
+		}
+	</style>
+{% endif %}    
 </head>
 
 <body>
