--- a/dimension/index.jinja
+++ b/dimension/index.jinja
@@ -80,7 +80,7 @@
 								<li><a href="#experience">Experience</a></li>
 								{% endif %}
 
-								{% if projects_html %}
+								{% if config['projects'] %}
 								<li><a href="#projects">Projects</a></li>
 								{% endif %}
 
@@ -88,9 +88,10 @@
 								<li><a href="#about">About</a></li>
 								{%endif%}
 
-								{% if gallery_html %}
+								{% if config["twitter_embed_url"] %}
 								<li><a href="#gallery">Elsewhere</a></li>
 								{%endif%}
+
 
 								{% if config['blog'] %}
 								<li><a href={{config['blog_link']}}>Blog</a></li>
@@ -116,14 +117,19 @@
 							</article>
 						<!-- End of experience section -->
 
+					
+						
 						<!-- Start of projects section -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<p>Below are some of my projects</p>
-								{{ projects_html | safe }}
-							</article>
-						<!-- End of Projects section -->
+								<h3>{{config['projects'][0]['title']}}</h3>
+								<iframe class="airtable-embed" src={{config['projects'][0]['link']}} frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+								<h3>{{config['projects'][1]['title']}}</h3>
+								<iframe class="airtable-embed" src={{config['projects'][1]['link']}} frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
+								{{ projects_html | safe }}
+
+							</article>
 						<!-- About -->
 						{% if config["biography"] or config["social"] or config["avatar"] %}
 							<article id="about">
