--- a/dimension/index.jinja
+++ b/dimension/index.jinja
@@ -81,7 +81,7 @@
 								{% endif %}
 
 								{% if config['projects'] %}
-								<li><a href="#projects">Projects</a></li>
+								<li><a href="https://github.com/UtkarshR8j">Projects</a></li>
 								{% endif %}
 
 								{% if config["biography"] or config["social"] or config["avatar"] %}
